📚 Auto-update: News data refreshed - 2026-01-08 03:58 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -45718,5 +45718,61 @@
         "published": "Thu, 08 Jan 2026 02:30:25 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-Daily-Brief-69.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />What Made Fintech Stand Out In 2025? It was business as usual for fintech startups in 2025. The sector once&#8230;"
+    },
+    {
+        "id": "https://arstechnica.com/space/2026/01/nasa-postpones-space-station-spacewalk-due-to-crew-members-medical-concern/",
+        "title": "A crew member\u2019s \u201cmedical concern\u201d foils a planned spacewalk outside the ISS",
+        "link": "https://arstechnica.com/space/2026/01/nasa-postpones-space-station-spacewalk-due-to-crew-members-medical-concern/",
+        "published": "Thu, 08 Jan 2026 01:58:33 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"The situation is stable,\" NASA said in a statement Wednesday."
+    },
+    {
+        "id": "https://iceraidsnearme.com/",
+        "title": "Show HN: IceRaidsNearMe \u2013 Real-time, crowdsourced map of immigration enforcement",
+        "link": "https://iceraidsnearme.com/",
+        "published": "Thu, 08 Jan 2026 03:30:39 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46536862\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/arali-ventures-nets-23x-return-on-full-exit-from-hbox/articleshow/126405710.cms",
+        "title": "Arali Ventures nets 23x return on full exit from HBOX",
+        "link": "https://economictimes.indiatimes.com/tech/technology/arali-ventures-nets-23x-return-on-full-exit-from-hbox/articleshow/126405710.cms",
+        "published": "Thu, 08 Jan 2026 08:44:40 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "This follows remote health technology startup HBOX securing strategic growth investment from the Charlesbank Technology Opportunities Fund. Arali Ventures had invested in HBOX at the time of its inception. HBOX is a US-headquartered remote health technology startup, with its core engineering and delivery teams based in India."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/trump-shifts-ftc-pick-to-white-house-role-advising-on-tech-and-competition/articleshow/126405666.cms",
+        "title": "Trump shifts FTC pick to White House role advising on tech and competition",
+        "link": "https://economictimes.indiatimes.com/tech/technology/trump-shifts-ftc-pick-to-white-house-role-advising-on-tech-and-competition/articleshow/126405666.cms",
+        "published": "Thu, 08 Jan 2026 08:34:52 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The White House \u200dis withdrawing its nomination \u200bof Ryan Baasch for a Federal Trade Commission \u2060seat and instead naming him deputy director of the National Economic Council, elevating his role in shaping tech, telecom and competition policy."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/arm-launches-physical-ai-unit-joining-rush-to-robotics-by-tech-and-automakers/articleshow/126405615.cms",
+        "title": "Arm launches 'Physical AI' unit, joining rush to robotics by tech and automakers",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/arm-launches-physical-ai-unit-joining-rush-to-robotics-by-tech-and-automakers/articleshow/126405615.cms",
+        "published": "Thu, 08 Jan 2026 08:31:15 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Robots and autos are the core of Physical AI and share a wide range of existing sensor tech and other hardware. Automakers including Tesla are creating robots to automate warehouse and factory tasks. The head of the newly formed unit, Drew Henry, said that physical AI solutions could \"fundamentally \u200denhance labour, free up extra time\" and may have a considerable impact on gross domestic product as \u200ca result."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/tech-firms-must-block-unsolicited-nude-images-under-new-uk-rules/articleshow/126405589.cms",
+        "title": "Tech firms must block unsolicited nude images under new UK rules",
+        "link": "https://economictimes.indiatimes.com/tech/technology/tech-firms-must-block-unsolicited-nude-images-under-new-uk-rules/articleshow/126405589.cms",
+        "published": "Thu, 08 Jan 2026 08:29:12 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Technology companies in Britain will be required to block \u200dunsolicited sexual images under \u200bonline safety rules taking effect on Thursday, as governments \u2060worldwide step up efforts to curb abuse and risks linked to artificial intelligence."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/chinese-tech-companies-led-by-zhipu-ai-to-rise-in-hong-kong-debut/articleshow/126405543.cms",
+        "title": "Chinese tech companies, led by Zhipu AI, to rise in Hong Kong debut",
+        "link": "https://economictimes.indiatimes.com/tech/technology/chinese-tech-companies-led-by-zhipu-ai-to-rise-in-hong-kong-debut/articleshow/126405543.cms",
+        "published": "Thu, 08 Jan 2026 08:27:59 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Three \u200dChinese technology firms \u200bare set to \u2060debut higher on Thursday after raising a combined HK$9.3 billion ($1.19 \u200cbillion), \u200csetting the tone for what investors \u200chope will be a busier year for new listings in Hong Kong."
     }
 ]
