--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -45774,5 +45774,61 @@
         "published": "Thu, 08 Jan 2026 08:27:59 +0530",
         "source": "Tech-Economic Times",
         "summary": "Three \u200dChinese technology firms \u200bare set to \u2060debut higher on Thursday after raising a combined HK$9.3 billion ($1.19 \u200cbillion), \u200csetting the tone for what investors \u200chope will be a busier year for new listings in Hong Kong."
+    },
+    {
+        "id": "https://www.aardwolf.com/",
+        "title": "Play Aardwolf MUD",
+        "link": "https://www.aardwolf.com/",
+        "published": "Wed, 07 Jan 2026 23:31:05 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46534777\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/euhomy-ice-leopard-x1-hands-onces-2026/",
+        "title": "I'm in love with this portable ice maker that churns out buckets of ice in just 5 minutes",
+        "link": "https://www.zdnet.com/article/euhomy-ice-leopard-x1-hands-onces-2026/",
+        "published": "Thu, 08 Jan 2026 04:17:00 GMT",
+        "source": "Latest news",
+        "summary": "Euhomy's Ice Leopard X1 is the world's fastest portable ice maker - and it's priced right."
+    },
+    {
+        "id": "https://www.zdnet.com/article/asus-zenbook-duo-dual-screen-laptop-hands-on-ces/",
+        "title": "I tried Asus' latest ZenBook Duo, and it's a dual-screen laptop I'd finally use full time",
+        "link": "https://www.zdnet.com/article/asus-zenbook-duo-dual-screen-laptop-hands-on-ces/",
+        "published": "Thu, 08 Jan 2026 04:12:00 GMT",
+        "source": "Latest news",
+        "summary": "The Asus ZenBook Duo (2026) is everything I wanted from the previous-gen model and looks ready to replace my M4 MacBook Air."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ohsnap-mcon-controller-hands-on-ces/",
+        "title": "I found this MagSafe accessory hidden in the CES halls, and am so glad I did",
+        "link": "https://www.zdnet.com/article/ohsnap-mcon-controller-hands-on-ces/",
+        "published": "Thu, 08 Jan 2026 04:03:00 GMT",
+        "source": "Latest news",
+        "summary": "A more polished Ohsnap Mcon controller is being showcased at CES, and it's accompanied by some quirky companions."
+    },
+    {
+        "id": "https://www.zdnet.com/article/asus-rog-neocore-wi-fi-8-router-ces-concept/",
+        "title": "Asus gave us a first look at its Wi-Fi 8 router at CES, and it's nothing we could've expected",
+        "link": "https://www.zdnet.com/article/asus-rog-neocore-wi-fi-8-router-ces-concept/",
+        "published": "Thu, 08 Jan 2026 04:02:00 GMT",
+        "source": "Latest news",
+        "summary": "Asus previews the ROG NeoCore, a proof-of-concept router designed to address today's most significant network challenges."
+    },
+    {
+        "id": "https://inc42.com/buzz/ai-startup-aivar-raises-4-6-mn-to-fuel-international-expansion/",
+        "title": "AI Startup Aivar Raises $4.6 Mn To Fuel International Expansion",
+        "link": "https://inc42.com/buzz/ai-startup-aivar-raises-4-6-mn-to-fuel-international-expansion/",
+        "published": "Thu, 08 Jan 2026 04:20:50 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/07/AI-FUNDING-FTR.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />AI services startup Aivar has raised $4.6 Mn (INR 41.3 Cr) in a seed funding round led by Sorin Investments,&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/done-raises-3-mn-to-expand-retail-product-portfolio-salon-network/",
+        "title": "&Done Raises $3 Mn To Expand Retail Product Portfolio & Salon Network",
+        "link": "https://inc42.com/buzz/done-raises-3-mn-to-expand-retail-product-portfolio-salon-network/",
+        "published": "Thu, 08 Jan 2026 00:30:03 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"&amp;Done funding\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Done-Founders-Feature.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />D2C haircare startup &#38;Done has secured $3 Mn (INR 26.9 Cr) in a Series A funding round led by RTP&#8230;"
     }
 ]
