📚 Auto-update: News data refreshed - 2026-01-08 05:17 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -45830,5 +45830,45 @@
         "published": "Thu, 08 Jan 2026 00:30:03 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"&amp;Done funding\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Done-Founders-Feature.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />D2C haircare startup &#38;Done has secured $3 Mn (INR 26.9 Cr) in a Series A funding round led by RTP&#8230;"
+    },
+    {
+        "id": "https://www.jpmorganchase.com/ir/news/2026/chase-to-become-new-issuer-of-apple-card",
+        "title": "Chase to become new issuer of Apple Card",
+        "link": "https://www.jpmorganchase.com/ir/news/2026/chase-to-become-new-issuer-of-apple-card",
+        "published": "Thu, 08 Jan 2026 03:29:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46536848\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/most-exciting-ces-2026-products-you-can-buy-now/",
+        "title": "9 exciting products at CES 2026 that you can actually buy today (including a surprise pick)",
+        "link": "https://www.zdnet.com/article/most-exciting-ces-2026-products-you-can-buy-now/",
+        "published": "Thu, 08 Jan 2026 04:36:00 GMT",
+        "source": "Latest news",
+        "summary": "Add some of the most innovative tech to your cart right now. Here are our favorite CES products you can buy or preorder now."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-samsung-tv-settings-change/",
+        "title": "Own a Samsung TV? I changed these 6 settings to speed up the whole system",
+        "link": "https://www.zdnet.com/article/best-samsung-tv-settings-change/",
+        "published": "Thu, 08 Jan 2026 04:34:00 GMT",
+        "source": "Latest news",
+        "summary": "Most people leave their TV settings untouched, but if you have a Samsung, a few quick adjustments can significantly improve its visual output."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/indias-amagi-media-targets-over-869-million-valuation-in-downsized-ipo/articleshow/126406670.cms",
+        "title": "Amagi Media targets over $869 million valuation in downsized IPO",
+        "link": "https://economictimes.indiatimes.com/tech/technology/indias-amagi-media-targets-over-869-million-valuation-in-downsized-ipo/articleshow/126406670.cms",
+        "published": "Thu, 08 Jan 2026 10:06:15 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Amagi Media Labs plans to go public next week at a reduced size, targeting a valuation above $869 million. The Bengaluru firm has cut both new shares and shareholder sales from earlier plans. Its IPO comes as strong investor demand fuels listings by Indian technology companies."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/cashfrees-cardlink-pilgrim-achieved-remarkable-90-card-success-rate-faster-conversion",
+        "title": "Cashfree\u2019s CardLink in action: How Pilgrim achieved a remarkable 90% card success rate and faster conversions",
+        "link": "https://yourstory.com/2026/01/cashfrees-cardlink-pilgrim-achieved-remarkable-90-card-success-rate-faster-conversion",
+        "published": "Thu, 08 Jan 2026 03:50:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Pilgrim\u2019s partnership with Cashfree Payments shows how the right checkout and card infrastructure can unlock scale, trust, and repeat behaviour in India\u2019s crowded D2C market."
     }
 ]
