--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -45870,5 +45870,45 @@
         "published": "Thu, 08 Jan 2026 03:50:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Pilgrim\u2019s partnership with Cashfree Payments shows how the right checkout and card infrastructure can unlock scale, trust, and repeat behaviour in India\u2019s crowded D2C market."
+    },
+    {
+        "id": "https://www.wired.com/story/litter-robot-promo-code/",
+        "title": "Litter-Robot Promo Codes and Deals: Up to $150 Off",
+        "link": "https://www.wired.com/story/litter-robot-promo-code/",
+        "published": "Thu, 08 Jan 2026 06:10:00 +0000",
+        "source": "WIRED",
+        "summary": "Get the latest Litter-Robot Discounts on Litter-Robot self-cleaning litter boxes, accessories, and more."
+    },
+    {
+        "id": "https://patchouli.readthedocs.io/en/latest/",
+        "title": "Project Patchouli: Open-source electromagnetic drawing tablet hardware",
+        "link": "https://patchouli.readthedocs.io/en/latest/",
+        "published": "Thu, 08 Jan 2026 05:20:05 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46537489\">Comments</a>"
+    },
+    {
+        "id": "https://openinframap.org",
+        "title": "Open Infrastructure Map",
+        "link": "https://openinframap.org",
+        "published": "Thu, 08 Jan 2026 03:31:12 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46536866\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/jpmorgan-to-replace-goldman-as-apple-card-issuer/articleshow/126407671.cms",
+        "title": "JPMorgan to replace Goldman as Apple Card issuer",
+        "link": "https://economictimes.indiatimes.com/tech/technology/jpmorgan-to-replace-goldman-as-apple-card-issuer/articleshow/126407671.cms",
+        "published": "Thu, 08 Jan 2026 11:15:15 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "JPMorgan Chase will replace Goldman Sachs as the issuer of the Apple Card, bringing over $20 billion in balances to its platform. The deal strengthens JPMorgan\u2019s credit card business, while Goldman continues to scale back consumer operations. Completion depends on regulatory approval and is expected in about two years."
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-youtube-music-ai-generated-songs-recommendations/",
+        "title": "Why YouTube users can\u2019t escape AI-generated music in recommendations",
+        "link": "https://www.medianama.com/2026/01/223-youtube-music-ai-generated-songs-recommendations/",
+        "published": "Thu, 08 Jan 2026 05:56:57 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Users say YouTube Music continues to recommend AI-generated songs despite repeated feedback such as downvotes and \u201cnot interested\u201d markers. Complaints suggest listeners lack effective controls to filter out synthetic music.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-youtube-music-ai-generated-songs-recommendations/\">Why YouTube users can\u2019t escape AI-generated music in recommendations</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
