--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -45910,5 +45910,45 @@
         "published": "Thu, 08 Jan 2026 05:56:57 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Users say YouTube Music continues to recommend AI-generated songs despite repeated feedback such as downvotes and \u201cnot interested\u201d markers. Complaints suggest listeners lack effective controls to filter out synthetic music.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-youtube-music-ai-generated-songs-recommendations/\">Why YouTube users can\u2019t escape AI-generated music in recommendations</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/07/jpmorgan-chase-becomes-the-new-issuer-of-the-apple-card/",
+        "title": "JPMorgan Chase becomes the new issuer of the Apple Card",
+        "link": "https://techcrunch.com/2026/01/07/jpmorgan-chase-becomes-the-new-issuer-of-the-apple-card/",
+        "published": "Thu, 08 Jan 2026 06:31:55 +0000",
+        "source": "TechCrunch",
+        "summary": "Apple expects the transition to take 24 months"
+    },
+    {
+        "id": "https://www.wired.com/story/peacock-promo-code/",
+        "title": "Peacock Promo Codes: 16% Off January 2026",
+        "link": "https://www.wired.com/story/peacock-promo-code/",
+        "published": "Thu, 08 Jan 2026 06:44:00 +0000",
+        "source": "WIRED",
+        "summary": "Stream your favorite shows for up to $80 off this month, and save on subscription plans with the latest Peacock TV coupons from WIRED."
+    },
+    {
+        "id": "https://blog.cloudflare.com/bgp-route-leak-venezuela/",
+        "title": "A closer look at a BGP anomaly in Venezuela",
+        "link": "https://blog.cloudflare.com/bgp-route-leak-venezuela/",
+        "published": "Thu, 08 Jan 2026 06:46:26 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46538001\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/discord-snap-investor-niko-bonatsos-departs-general-catalyst-plans-new-vc-firm/articleshow/126408460.cms",
+        "title": "Discord, Snap investor Niko Bonatsos departs General Catalyst, plans new VC firm",
+        "link": "https://economictimes.indiatimes.com/tech/technology/discord-snap-investor-niko-bonatsos-departs-general-catalyst-plans-new-vc-firm/articleshow/126408460.cms",
+        "published": "Thu, 08 Jan 2026 12:04:19 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Niko Bonatsos has quit General Catalyst after a 15-year tenure, a mutual decision that sees him exploring new ventures. He plans to launch his own firm, focusing on backing young founders, particularly within the burgeoning AI startup scene. This exit follows other senior departures from the venture capital firm."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/meesho-shares-hit-lower-circuit-exit-of-senior-executive-expiry-of-lock-in-period",
+        "title": "Meesho shares hit lower circuit after exit of senior executive, expiry of lock-in period for pre-IPO equity",
+        "link": "https://yourstory.com/2026/01/meesho-shares-hit-lower-circuit-exit-of-senior-executive-expiry-of-lock-in-period",
+        "published": "Thu, 08 Jan 2026 05:51:54 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "On Thursday morning, shares of the Vidit Aatrey-led company opened higher, and later settled 5% down in the lower circuit at Rs 164.4 apiece on the NSE."
     }
 ]
