--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -45950,5 +45950,61 @@
         "published": "Thu, 08 Jan 2026 05:51:54 GMT",
         "source": "YourStory RSS Feed",
         "summary": "On Thursday morning, shares of the Vidit Aatrey-led company opened higher, and later settled 5% down in the lower circuit at Rs 164.4 apiece on the NSE."
+    },
+    {
+        "id": "https://www.theverge.com/transportation/857933/volvo-ex60-range-charging-speed-megacasting-battery",
+        "title": "Volvo touts EX60\u2019s range and charging speed ahead of official debut",
+        "link": "https://www.theverge.com/transportation/857933/volvo-ex60-range-charging-speed-megacasting-battery",
+        "published": "2026-01-08T03:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Volvo is starting to trickle out some details about its upcoming midsize electric SUV, the EX60, before its official debut January 21st. The EX60 will have an estimated range of 400 miles (or 810km based on the generous WLTP standard in Europe). That's significantly more range than any previous Volvo EV - at least until [&#8230;]"
+    },
+    {
+        "id": "https://effectiviology.com/napoleon/",
+        "title": "The Napoleon Technique: Postponing Things to Increase Productivity",
+        "link": "https://effectiviology.com/napoleon/",
+        "published": "Mon, 05 Jan 2026 00:07:44 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46493785\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/germanys-sme-firms-mittelstand-cuts-ai-investments-in-2025-study-shows/articleshow/126409251.cms",
+        "title": "Germany's SME firms 'Mittelstand' cuts AI investments in 2025, study shows",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/germanys-sme-firms-mittelstand-cuts-ai-investments-in-2025-study-shows/articleshow/126409251.cms",
+        "published": "Thu, 08 Jan 2026 12:38:37 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "German SMEs are pulling back on their investments in artificial intelligence, a sharp contrast to their counterparts in other sectors who are ramping up spending. Analysts caution that this divergence could lead to a notable technology disparity."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/nvidia-requires-full-upfront-payment-for-h200-chips-in-china-report/articleshow/126409169.cms",
+        "title": "Nvidia requires full upfront payment for H200 chips in China: Report",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/nvidia-requires-full-upfront-payment-for-h200-chips-in-china-report/articleshow/126409169.cms",
+        "published": "Thu, 08 Jan 2026 12:34:36 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Nvidia reportedly is demanding a full upfront payment for its H200 AI chips from Chinese buyers. This strict policy aims to mitigate risks amid uncertainty over Beijing's approval for shipments. Chinese tech firms have placed significant orders for these advanced chips."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/dhruva-space-deploy-satellite-stack-isros-pslv-c62-mission",
+        "title": "Dhruva Space set to deploy satellite stack on ISRO\u2019s PSLV-C62",
+        "link": "https://yourstory.com/2026/01/dhruva-space-deploy-satellite-stack-isros-pslv-c62-mission",
+        "published": "Thu, 08 Jan 2026 07:11:42 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Dhruva\u2019s Polar Access-1 will place four satellites into a sun-synchronous orbit, along with five separation systems and supporting ground infrastructure, bringing together state, academic, and commercial users under a single coordinated mission."
+    },
+    {
+        "id": "https://inc42.com/buzz/takeme2space-raises-5-mn-to-expand-its-satellite-constellation/",
+        "title": "TakeMe2Space Raises $5 Mn To Expand Its Satellite Constellation",
+        "link": "https://inc42.com/buzz/takeme2space-raises-5-mn-to-expand-its-satellite-constellation/",
+        "published": "Thu, 08 Jan 2026 07:41:42 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"TakeMe2Space funding\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/TakeMe2Space-Team-Feature.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Spacetech startup TakeMe2Space has secured $5 Mn (about INR 44.9 Cr) in its seed round, led by Chiratae Ventures, with&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-nvidia-rubin-full-stack-ai-platform/",
+        "title": "NVIDIA Unveils Rubin, Goes Beyond GPU Sales to Provide Full-stack AI Computing Systems",
+        "link": "https://www.medianama.com/2026/01/223-nvidia-rubin-full-stack-ai-platform/",
+        "published": "Thu, 08 Jan 2026 08:01:32 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>NVIDIA\u2019s Rubin marks a major shift as the company moves beyond GPU sales to deliver full-stack AI computing systems designed for large-scale training and inference.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-nvidia-rubin-full-stack-ai-platform/\">NVIDIA Unveils Rubin, Goes Beyond GPU Sales to Provide Full-stack AI Computing Systems</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
