--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -46006,5 +46006,45 @@
         "published": "Thu, 08 Jan 2026 08:01:32 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>NVIDIA\u2019s Rubin marks a major shift as the company moves beyond GPU sales to deliver full-stack AI computing systems designed for large-scale training and inference.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-nvidia-rubin-full-stack-ai-platform/\">NVIDIA Unveils Rubin, Goes Beyond GPU Sales to Provide Full-stack AI Computing Systems</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://arstechnica.com/cars/2026/01/volvo-says-new-ex60-has-400-mile-range-charges-up-to-400-kw/",
+        "title": "Volvo says new EX60 has 400-mile range, charges up to 400 kW",
+        "link": "https://arstechnica.com/cars/2026/01/volvo-says-new-ex60-has-400-mile-range-charges-up-to-400-kw/",
+        "published": "Thu, 08 Jan 2026 08:00:55 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The new EX60 will be unveiled later this month; here's what we know."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/dancing-isnt-enough-industry-pushes-for-practical-robots/articleshow/126410908.cms",
+        "title": "Dancing isn't enough: Industry pushes for practical robots",
+        "link": "https://economictimes.indiatimes.com/tech/technology/dancing-isnt-enough-industry-pushes-for-practical-robots/articleshow/126410908.cms",
+        "published": "Thu, 08 Jan 2026 14:24:31 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Humanoid robots danced, somersaulted, dealt blackjack and played ping-pong at the Consumer Electronics Show this week, but some in the industry are impatient for them to become more useful, not just a promise of things to come. - According to the Consumer Technology Association that runs CES, the robotics industry is showing dynamism and potential."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/practo-expands-to-us-after-uae-debut-last-year/articleshow/126410905.cms",
+        "title": "Practo expands to US after UAE debut last year",
+        "link": "https://economictimes.indiatimes.com/tech/startups/practo-expands-to-us-after-uae-debut-last-year/articleshow/126410905.cms",
+        "published": "Thu, 08 Jan 2026 14:24:17 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Health-tech platform Practo has launched its care navigation service in the United States. The company has already seen significant adoption, listing over two lakh doctors. Practo aims to strengthen its US team and explore acquisitions."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/textbooks-to-podcasts-google-turns-lessons-into-podcasts-with-new-gemini-classroom-tool/articleshow/126410357.cms",
+        "title": "Textbooks to podcasts: Google turns lessons into podcasts with new Gemini classroom tool",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/textbooks-to-podcasts-google-turns-lessons-into-podcasts-with-new-gemini-classroom-tool/articleshow/126410357.cms",
+        "published": "Thu, 08 Jan 2026 13:51:54 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Google has launched a Gemini-powered tool that lets teachers create podcast-style audio lessons in Google Classroom. The feature targets students\u2019 growing preference for audio learning and is now rolling out to education subscribers. While interest is strong, some teachers remain wary of over-reliance on AI in classrooms."
+    },
+    {
+        "id": "https://inc42.com/buzz/amagi-ipo-to-open-on-january-13-price-band-set-at-inr-343-361/",
+        "title": "Amagi IPO To Open On January 13, Price Band Set At INR 343-361",
+        "link": "https://inc42.com/buzz/amagi-ipo-to-open-on-january-13-price-band-set-at-inr-343-361/",
+        "published": "Thu, 08 Jan 2026 09:18:20 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Amagi IPO To Open On January 13, Price Band Set At INR 343-361\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/07/Amagi-FTR-2.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Media SaaS unicorn Amagi has filed the red herring prospectus (RHP) for its initial public offering (IPO), a couple of&#8230;"
     }
 ]
