📚 Auto-update: News data refreshed - 2026-01-08 12:23 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -46126,5 +46126,101 @@
         "published": "Thu, 08 Jan 2026 10:53:43 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The Karnataka HC has suggested the use of tamper-proof QR codes on the bank guarantees and APIs for real-time confirmation between banks and beneficiary authorities. </p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-karnataka-hc-centre-qr-codes-api-bank-guarantees-fraud/\">Karnataka HC Asks Centre to Consider QR Codes, APIs to Prevent Bank Guarantees Fraud</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.theverge.com/tech/857325/the-gap-between-premium-and-budget-tv-brands-is-quickly-closing",
+        "title": "The gap between premium and budget\u00a0TV\u00a0brands is quickly closing",
+        "link": "https://www.theverge.com/tech/857325/the-gap-between-premium-and-budget-tv-brands-is-quickly-closing",
+        "published": "2026-01-08T07:00:00-05:00",
+        "source": "The Verge",
+        "summary": "For all the time that I've been covering technology, there's been a hierarchy when it comes to TV brands. The big three - Sony, Samsung, and LG - have been on top for a while. Pioneer and Panasonic were up there with plasma TVs, and Panasonic is getting back in the game in the States. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/report/857978/trump-venezuela-greenland-oil-mineral-energy-imperialism",
+        "title": "America\u2019s new era of energy imperialism is about more than oil",
+        "link": "https://www.theverge.com/report/857978/trump-venezuela-greenland-oil-mineral-energy-imperialism",
+        "published": "2026-01-08T07:00:00-05:00",
+        "source": "The Verge",
+        "summary": "President Donald Trump has no shame in admitting what he wants to get out of attacking Venezuela and threatening other energy resource-rich nations. \"We're gonna get the oil flowing the way it should be,\" he said January 3rd, soon after his administration stunned the world with what many policy experts and Democratic lawmakers are calling [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/rgb-led-televisions-2026/",
+        "title": "2026 Is the Year of the RGB LED TV",
+        "link": "https://www.wired.com/story/rgb-led-televisions-2026/",
+        "published": "Thu, 08 Jan 2026 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The crop of next-generation TVs arriving this year has more accurate colors than ever, thanks to a fancy new kind of backlighting."
+    },
+    {
+        "id": "https://www.wired.com/story/solving-the-pc-memory-crisis/",
+        "title": "The Daring Attempt to End the Memory Shortage Crisis",
+        "link": "https://www.wired.com/story/solving-the-pc-memory-crisis/",
+        "published": "Thu, 08 Jan 2026 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "The supply shortage of the RAM needed to build phones and PCs isn\u2019t going away. But a few companies have a plan to solve it."
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/disney-is-launching-vertical-videos-this-year-120000776.html?src=rss",
+        "title": "Disney+ is launching vertical videos this year",
+        "link": "https://www.engadget.com/entertainment/streaming/disney-is-launching-vertical-videos-this-year-120000776.html?src=rss",
+        "published": "Thu, 08 Jan 2026 12:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/entertainment/streaming/the-redesigned-disney-app-is-rolling-out-to-more-users-in-the-us-204759533.html\" target=\"_blank\">Disney+</a> will add vertical videos to its service in the US sometime this year, in hopes that they can entice viewers to engage with its app every day. The company has made the announcement at its Tech + Data Showcase event at CES 2026. Disney first dabbled in vertical content with Verts, which launched for the ESPN app in Au"
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/08/1130868/legal-challenges-offshore-wind/",
+        "title": "What new legal challenges mean for the future of US offshore wind",
+        "link": "https://www.technologyreview.com/2026/01/08/1130868/legal-challenges-offshore-wind/",
+        "published": "Thu, 08 Jan 2026 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "For offshore wind power in the US, the new year is bringing new legal battles. On December 22, the Trump administration announced it would pause the leases of five wind farms currently under construction off the US East Coast. Developers were ordered to stop work immediately. The cited reason? National security, specifically concerns that turbines&#8230;"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/funding/takeme2space-raises-5-million-led-by-chiratae-ventures/articleshow/126414088.cms",
+        "title": "TakeMe2Space raises $5 million, led by Chiratae Ventures",
+        "link": "https://economictimes.indiatimes.com/tech/funding/takeme2space-raises-5-million-led-by-chiratae-ventures/articleshow/126414088.cms",
+        "published": "Thu, 08 Jan 2026 17:12:08 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The startup said it will use the capital to expand its satellite constellation to six spacecraft, scale real-time in-orbit AI inferencing, and accelerate R&amp;D for megawatt-scale compute satellites. The company said it will also expand its presence across India, the US, and Australia."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/upgrad-pulls-out-of-conversations-to-acquire-unacademy/articleshow/126413621.cms",
+        "title": "UpGrad pulls out of talks to acquire Unacademy over valuation differences",
+        "link": "https://economictimes.indiatimes.com/tech/startups/upgrad-pulls-out-of-conversations-to-acquire-unacademy/articleshow/126413621.cms",
+        "published": "Thu, 08 Jan 2026 16:48:56 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The discussions stalled due to differing valuation expectations between the two sides. \u201cThe deal talks were officially called off today. The two sides couldn\u2019t align on the final number for the valuation,\u201d one of the persons said."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/flipkart-appoints-gunjan-bhartia-as-svp-business-finance/articleshow/126413175.cms",
+        "title": "Flipkart appoints Gunjan Bhartia as SVP business finance",
+        "link": "https://economictimes.indiatimes.com/tech/technology/flipkart-appoints-gunjan-bhartia-as-svp-business-finance/articleshow/126413175.cms",
+        "published": "Thu, 08 Jan 2026 16:28:45 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The company said that Bhartia will lead business finance for Flipkart's in-house logistics unit eKart across all verticals. He has previously held senior positions at companies such as GE and Coupang."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/namma-yatri-corporate-mobility-market-ride-benefits-enterprise-employees",
+        "title": "Namma Yatri enters corporate mobility market with ride benefits for enterprise employees",
+        "link": "https://yourstory.com/2026/01/namma-yatri-corporate-mobility-market-ride-benefits-enterprise-employees",
+        "published": "Thu, 08 Jan 2026 07:32:05 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The ride-hailing platform has partnered with OneBanc to offer predictable pricing and streamline bookings for employees and commission-free earnings for Namma Yatri drivers."
+    },
+    {
+        "id": "https://inc42.com/buzz/spector-ai-raises-6-7-mn-to-scale-its-industrial-ai-offerings/",
+        "title": "Spector.ai Raises $6.7 Mn To Scale Its Industrial AI Offerings",
+        "link": "https://inc42.com/buzz/spector-ai-raises-6-7-mn-to-scale-its-industrial-ai-offerings/",
+        "published": "Thu, 08 Jan 2026 12:00:50 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Spector.ai Raises $6.7 Mn To Scale Its Industrial AI Offerings\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/ftr.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />AI startup Spector.ai has raised INR 58 Cr ($6.7 Mn) in a funding round led by IvyCap Ventures. The startup&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-cybersecurity-firm-kratikal-tech-initial-public-offering-bse/",
+        "title": "Cybersecurity Firm Kratikal Tech Files For Initial Public Offering With BSE",
+        "link": "https://www.medianama.com/2026/01/223-cybersecurity-firm-kratikal-tech-initial-public-offering-bse/",
+        "published": "Thu, 08 Jan 2026 11:23:43 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Kratikal Tech has filed its DRHP for an initial public offering with the Bombay Stock Exchange (BSE). The fresh issue comprises  up to 3 million equity shares of Rs 10 each.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-cybersecurity-firm-kratikal-tech-initial-public-offering-bse/\">Cybersecurity Firm Kratikal Tech Files For Initial Public Offering With BSE</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
